--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
-        applicationId "nogsantos.ufg.br.qrscanner"
+        applicationId 'nogsantos.ufg.br.qrscanner'
         minSdkVersion 14
         targetSdkVersion 20
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
@@ -17,22 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
 
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/zbar.jar')
 }
-
 task copyNativeLibs(type: Copy) {
-    from(new File(getProjectDir(), 'src/libs/')) { include '**/*.so' }
-    into new File(buildDir, 'libs')
+    from(new File(getProjectDir(), 'libs')) { include '**/*.so' }
+    into new File(projectDir, 'libs')
 }
-
 tasks.withType(com.android.build.gradle.tasks.PackageApplication) { pkgTask ->
     pkgTask.jniFolders = new HashSet<File>()
-    pkgTask.jniFolders.add(new File(buildDir, 'libs'))
+    pkgTask.jniFolders.add(new File(projectDir, 'libs'))
 }
-
-clean.dependsOn 'cleanCopyNativeLibs'
-
